# mlflow

./: .gitignore  LICENSE  README.ipynb  README.md  TESTME.ipynb  docker-compose.yml  environment.yml  index.md  index.yaml  mlflow-0.1.0.tgz  mlflow-2.10.0-1.tgz  mlflow-2.10.2-1.tgz  mlflow-2.11.1-1.tgz  mlflow-2.11.3-1.tgz  mlflow-2.12.1-1.tgz  mlflow-2.12.2-1.tgz  mlflow-2.13.0-1.tgz  mlflow-2.13.1-1.tgz  mlflow-2.13.2-1.tgz  mlflow-2.14.0-1.tgz  mlflow-2.14.1-1.tgz  mlflow-2.14.2-1.tgz  mlflow-2.14.3-1.tgz  mlflow-2.15.0-1.tgz  mlflow-2.15.1-1.tgz  mlflow-2.16.0-1.tgz  mlflow-2.16.2-1.tgz  mlflow-2.17.0-1.tgz  mlflow-2.17.1-1.tgz  mlflow-2.17.2-1.tgz  mlflow-2.18.0-1.tgz  mlflow-2.19.0-1.tgz  mlflow-2.20.0-1.tgz  mlflow-2.20.1-1.tgz  mlflow-2.20.2-1.tgz  mlflow-2.20.3-1.tgz  mlflow-2.20.4-1.tgz  mlflow-2.21.0-1.tgz  mlflow-2.21.1-1.tgz  mlflow-2.21.2-1.tgz  (+78 more)
.github/scripts/: upgrade.sh
.github/workflows/: release.yaml  upgrade.yaml
charts/: .gitignore  README.md
charts/mlflow/: Chart.yaml  values.yaml
charts/mlflow-deployments-server/: Chart.yaml  values.yaml
charts/mlflow-deployments-server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/mlflow/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
docker/: Dockerfile  README.md  build_image.sh  docker-compose.yml  entrypoint.sh  mlflow_check.py
mlflow/: Dockerfile
samples/: artifacts.py  chat.py  completions.py  config.yaml  embeddings.py  tracking.py
